# chess_engine

./: CMakeLists.txt  bbc
src/: bbc.c
